tests/errors/semantic/non_blocking/TOO_FEW_ARGS.py
def f(b:'int'):
    print(b)

f()
